# WT_2.0

./: .gitattributes  .gitignore  ASFAMProcessor.spec  ASFAM_and_ASFAMProcessor_Technical_Description.txt  CD_to_6500.py  LICENSE  Q1_extreact.py  README.md  USER_GUIDE.md  convert_to_WT.py  extract_product_ions.py  pyproject.toml  release_notes_v0.4.260422.txt  release_notes_v0.5.260423.txt  requirements.txt  setup.py
HFs_tools/: MSDIAL Outbound Call Data Integration and De-duplication_0910.py
P1_Script/: Explanation.txt  (+5 more)
apps/asfam_processor/: ASFAMProcessor.spec  pyproject.toml
apps/asfam_processor/asfam/: __init__.py  cli.py  config.py  constants.py  models.py
apps/asfam_processor/asfam/core/: __init__.py  clustering.py  eic.py  mass_utils.py  ms1_scan_adapter.py  ms2_amdis_clustering.py  ms2_scan_adapter.py  peak_detection.py  similarity.py  smoothing.py
apps/asfam_processor/asfam/gui/: __init__.py  app.py  eic_plot.py  feature_table.py  i18n.py  main_window.py  ms2_plot.py  scatter_plot.py  setup_panel.py  worker.py
apps/asfam_processor/asfam/io/: __init__.py  eic_store.py  mzml_reader.py  project_file.py  result_export.py  spectral_library.py  spill.py
apps/asfam_processor/asfam/pipeline/: __init__.py  group_ids.py  orchestrator.py  stage0_load.py  stage1_ms2_detection.py  stage1b_ms1_detection.py  stage2_ms1_assignment.py  stage2b_inference.py  stage4_isotope_dedup.py  stage5_adduct_dedup.py  stage5b_duplicate_detection.py  stage6_isf_detection.py  stage6b_annotation.py  stage7_alignment.py  stage7_reconcile.py  stage8_export.py
apps/asfam_processor/tests/: conftest.py  test_adduct_counting.py  test_adduct_rt_gate.py  test_app_config.py  test_checkpoint.py  test_compare_msdial.py  test_compare_msdial_recall.py  test_detect_chrom_peaks.py  test_eic_store.py  test_gating_order.py  test_group_id_namespace.py  test_gui_export_no_output_dir.py  test_gui_followup5.py  test_gui_single_sample_view.py  test_isf_rt_gate.py  test_isotope_counting.py  test_library_release.py  test_mirror_variant_selection.py  test_ms1_scan_adapter.py  test_ms2_amdis_clustering.py  test_ms2_driven_floor.py  test_ms2_eic_massslice.py  test_ms2_export_normalization.py  test_ms2_scan_adapter.py  test_mzml_reader_centroid.py  test_project_file_roundtrip.py  test_segment_eic_index.py  test_spill.py  test_stage1_massslice_wiring.py  test_stage1_ms2_clustering_switch.py  test_stage1b_chrom_corr.py  test_stage1b_massslice.py  test_stage1b_massslice_smoke.py  test_stage1b_ms2_deconv_dispatch.py  test_stage1b_ms2_window_assign.py  test_stage1b_peak_detector_dispatch.py  test_stage1b_seed_centroid.py  test_stage2_massslice_skip.py  test_stage2b_lean_library.py  test_stage4_cross_segment.py  (+6 more)
(+67 files in other folders)
